Removes LocalAI integration and cleans up documentation (#162)
* chore(dependencies): update dependency versions in package.json and pom.xml

* conductor: initialize track 'LocalAI Hot Enabling at Runtime'

* feat(ai): Implement LocalAI hot enabling at runtime with health checks and lifecycle management

* chore(conductor): Mark track 'LocalAI Hot Enabling at Runtime' as complete

* fix(ai): Resolve LocalAI hot enabling race condition and dynamic port issues

* feat(ui): Add 'Open LocalAI UI' button to AI Settings

* feat(ui): Replace LocalAI model text field with a dropdown including gpt-oss-120b

* fix(ai): Use safer LocalAI model names and improve health check logging

* fix(ai): Correct database migrations and test dependencies for LocalAI

* fix(ui): Force start on enable and add 'cerbero' to model list

* fix(ai): Revert to original LocalAI model name and apply UI fixes for checkbox race condition

* fix(ai): Align LocalAI container config with AIO image expectations and use 'gpt-4' as default

* feat(ai): Enhance LocalAI management with environment variables and dynamic model fetching

* fix(ai): Use MODELS environment variable to trigger automated model preloading and downloads

* fix(ui): Disable Refresh Models button when not ready and add null checks

* feat(ai): Add dynamic model installation via LocalAI API

* feat(ai): Add background installation tracking and progress visualization for LocalAI models

* feat(ai): Set Llama 3.1 8B as default LocalAI model and automate its download

* fix(ui): Resolve compilation errors in AiSettingsView

* fix(ai): Prefer system property for LocalAI base URL and improve health check messages

* feat: Remove LocalAI integration and cleanup documentation

This commit removes all LocalAI-related features, code, and documentation from the project.

Key changes include:
- Deletion of LocalAI-specific Java source files, tests, and configuration properties.
- Removal of LocalAI UI components and logic from .
- Refactoring of ,