@@ -16,11 +16,8 @@
 */
 package com.github.javydreamercsw.management.ui.view.show;
 
-import com.github.javydreamercsw.base.ai.LocalAIStatusService;
-import com.github.javydreamercsw.base.ai.SegmentNarrationConfig;
 import com.github.javydreamercsw.base.ai.SegmentNarrationController;
 import com.github.javydreamercsw.base.ai.SegmentNarrationServiceFactory;
-import com.github.javydreamercsw.base.ai.localai.LocalAIConfigProperties;
 import com.github.javydreamercsw.base.ui.component.ViewToolbar;
 import com.github.javydreamercsw.management.controller.show.ShowController;
 import com.github.javydreamercsw.management.domain.AdjudicationStatus;
@@ -35,7 +32,6 @@ import com.github.javydreamercsw.management.domain.show.segment.type.SegmentType
 import com.github.javydreamercsw.management.domain.show.segment.type.SegmentTypeRepository;
 import com.github.javydreamercsw.management.domain.title.Title;
 import com.github.javydreamercsw.management.domain.wrestler.Wrestler;
-import com.github.javydreamercsw.management.domain.wrestler.WrestlerRepository;
 import com.github.javydreamercsw.management.event.AdjudicationCompletedEvent;
 import com.github.javydreamercsw.management.event.SegmentsApprovedEvent;
 import com.github.javydreamercsw.management.service.npc.NpcService;
@@ -92,8 +88,6 @@ import lombok.NonNull;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.context.ApplicationEvent;
 import org.springframework.context.ApplicationListener;
-import org.springframework.core.env.Environment;
-import org.springframework.web.reactive.function.client.WebClient;
 
 /**
  * Detail view for displaying comprehensive information about a specific show. Accessible via URL
@@ -110,7 +104,6 @@ public class ShowDetailView extends Main
   private final SegmentService segmentService;
   private final SegmentRepository segmentRepository;
   private final SegmentTypeRepository segmentTypeRepository;
-  private final WrestlerRepository wrestlerRepository;
   private final NpcService npcService;
   private final WrestlerService wrestlerService;
   private final TitleService titleService;
@@ -119,12 +112,7 @@ public class ShowDetailView extends Main
   private final SeasonService seasonService;
   private final ShowTemplateService showTemplateService;
   private final RivalryService rivalryService;
-  private final LocalAIStatusService localAIStatusService;
-  private final LocalAIConfigProperties localAIConfigProperties;
-  private final SegmentNarrationConfig segmentNarrationConfig;
   private final SegmentNarrationServiceFactory segmentNarrationServiceFactory;
-  private final WebClient.Builder webClientBuilder;
-  private final Environment env;
   private final SegmentNarrationController segmentNarrationController;
   private final ShowController showController;
   private final MatchFulfillmentRepository matchFulfillmentRepository;
@@ -142,7 +130,6 @@ public class ShowDetailView extends Main
       SegmentService segmentService,
       SegmentRepository segmentRepository,
       SegmentTypeRepository segmentTypeRepository,
-      WrestlerRepository wrestlerRepository,
       NpcService npcService,
       WrestlerService wrestlerService,
       TitleService titleService,
@@ -151,21 +138,15 @@ public class ShowDetailView extends Main
       SeasonService seasonService,
       ShowTemplateService showTemplateService,
       RivalryService rivalryService,
-      LocalAIStatusService localAIStatusService,
-      LocalAIConfigProperties localAIConfigProperties,
-      SegmentNarrationConfig segmentNarrationConfig,
       SegmentNarrationServiceFactory segmentNarrationServiceFactory,
-      WebClient.Builder webClientBuilder,
       SegmentNarrationController segmentNarrationController,
       ShowController showController,
       MatchFulfillmentRepository matchFulfillmentRepository,
-      LeagueRepository leagueRepository,
-      Environment env) {
+      LeagueRepository leagueRepository) {
     this.showService = showService;
     this.segmentService = segmentService;
     this.segmentRepository = segmentRepository;
     this.segmentTypeRepository = segmentTypeRepository;
-    this.wrestlerRepository = wrestlerRepository;
     this.npcService = npcService;
     this.wrestlerService = wrestlerService;
     this.titleService = titleService;
@@ -174,12 +155,7 @@ public class ShowDetailView extends Main
     this.seasonService = seasonService;
     this.showTemplateService = showTemplateService;
     this.rivalryService = rivalryService;
-    this.localAIStatusService = localAIStatusService;
-    this.localAIConfigProperties = localAIConfigProperties;
-    this.segmentNarrationConfig = segmentNarrationConfig;
     this.segmentNarrationServiceFactory = segmentNarrationServiceFactory;
-    this.webClientBuilder = webClientBuilder;
-    this.env = env;
     this.segmentNarrationController = segmentNarrationController;
     this.showController = showController;
     this.matchFulfillmentRepository = matchFulfillmentRepository;
@@ -226,7 +202,7 @@ public class ShowDetailView extends Main
             .getQueryParameters()
             .getParameters()
             .getOrDefault("ref", List.of("shows"))
-            .get(0);
+            .getFirst();
 
     updateBackButton(referrer);
     this.currentShowId = showId; // Store the showId
@@ -267,7 +243,7 @@ public class ShowDetailView extends Main
   private void loadShow(@NonNull Long showId) {
     Optional<Show> showOpt = showService.getShowById(showId);
     if (showOpt.isPresent()) {
-      currentShow = showOpt.get(); // Store the show object
+      currentShow = showOpt.get();
       displayShow(currentShow);
     } else {
       showNotFound();
@@ -386,11 +362,7 @@ public class ShowDetailView extends Main
       HorizontalLayout dateLayout =
           createDetailRow(
               "Show Date:",
-              show.getShowDate()
-                  .format(
-                      DateTimeFormatter.ofPattern(
-                          "EEEE, MMMM d, yyyy"))); // Corrected: Removed unnecessary escaping of
-      // double quotes within the pattern string.
+              show.getShowDate().format(DateTimeFormatter.ofPattern("EEEE, MMMM d, yyyy")));
       detailsLayout.add(dateLayout);
     } else {
       HorizontalLayout dateLayout = createDetailRow("Show Date:", "Not scheduled");
@@ -438,11 +410,7 @@ public class ShowDetailView extends Main
               "Created:",
               show.getCreationDate()
                   .atZone(java.time.ZoneId.systemDefault())
-                  .format(
-                      DateTimeFormatter.ofPattern(
-                          "MMM d, yyyy 'at' h:mm a"))); // Corrected: Removed unnecessary escaping
-      // of double quotes within the pattern
-      // string.
+                  .format(DateTimeFormatter.ofPattern("MMM d, yyyy 'at' h:mm a")));
       detailsLayout.add(createdLayout);
     }
 
@@ -515,10 +483,7 @@ public class ShowDetailView extends Main
     Div descriptionContent = new Div();
     descriptionContent
         .getElement()
-        .setProperty(
-            "innerHTML",
-            show.getDescription()
-                .replace("\n", "<br>")); // Corrected: Replaced \n with <br> for HTML rendering.
+        .setProperty("innerHTML", show.getDescription().replace("\n", "<br>"));
     descriptionContent.addClassNames(LumoUtility.TextColor.BODY);
 
     card.add(descriptionTitle, descriptionContent);
@@ -615,16 +580,16 @@ public class ShowDetailView extends Main
 
     // Always initialize segmentsGrid and its wrapper
     segmentsGrid = createSegmentsGrid(segments);
-    segmentsGrid.setHeight("400px"); // Set a reasonable height for the grid
+    segmentsGrid.setHeight("400px");
     segmentsGrid.setId("segments-grid");
 
     // Wrap the grid in a Div to enable horizontal scrolling
     Div gridWrapper = new Div(segmentsGrid);
     gridWrapper.addClassNames(LumoUtility.Overflow.AUTO, LumoUtility.Width.FULL);
-    gridWrapper.getStyle().set("flex-grow", "4"); // Allow wrapper to grow
+    gridWrapper.getStyle().set("flex-grow", "4");
     gridWrapper.setId("segments-grid-wrapper");
     segmentsLayout.add(gridWrapper);
-    segmentsLayout.setFlexGrow(4, gridWrapper); // Let grid wrapper expand
+    segmentsLayout.setFlexGrow(4, gridWrapper);
 
     Span noSegmentsMessage = new Span("No segments scheduled for this show yet.");
     noSegmentsMessage.addClassNames(LumoUtility.TextColor.SECONDARY);
@@ -698,7 +663,7 @@ public class ShowDetailView extends Main
             })
         .setHeader("Participants")
         .setSortable(false)
-        .setFlexGrow(4); // Give more space to participants
+        .setFlexGrow(4);
 
     // Winner column
     grid.addColumn(
@@ -777,7 +742,7 @@ public class ShowDetailView extends Main
       otherSegment.setSegmentOrder(currentOrder);
       segmentRepository.save(segment);
       segmentRepository.save(otherSegment);
-      refreshSegmentsGrid(); // Call refreshSegmentsGrid instead of loadShow
+      refreshSegmentsGrid();
     }
   }
 
@@ -789,7 +754,7 @@ public class ShowDetailView extends Main
         e -> {
           segment.setMainEvent(e.getValue());
           segmentRepository.save(segment);
-          refreshSegmentsGrid(); // Call refreshSegmentsGrid instead of loadShow
+          refreshSegmentsGrid();
         });
     return checkbox;
   }
@@ -817,10 +782,8 @@ public class ShowDetailView extends Main
                   segmentService,
                   updatedSegment -> refreshSegmentsGrid(),
                   rivalryService,
-                  localAIStatusService,
-                  localAIConfigProperties,
                   segmentNarrationController,
-                  segmentNarrationServiceFactory); // Pass the factory
+                  segmentNarrationServiceFactory);
           dialog.open();
         });
 
@@ -842,9 +805,6 @@ public class ShowDetailView extends Main
   private void generateSummary(@NonNull Segment segment) {
     if (segmentNarrationServiceFactory.getAvailableServicesInPriorityOrder().isEmpty()) {
       String reason = "No AI providers are currently enabled or reachable.";
-      if (localAIStatusService.getStatus() != LocalAIStatusService.Status.READY) {
-        reason = "LocalAI is still initializing: " + localAIStatusService.getMessage();
-      }
       Notification.show(reason, 5000, Notification.Position.MIDDLE)
           .addThemeVariants(NotificationVariant.LUMO_ERROR);
       return;
@@ -935,7 +895,7 @@ public class ShowDetailView extends Main
             .collect(Collectors.toList()));
     titleMultiSelectComboBox.setItemLabelGenerator(Title::getName);
     titleMultiSelectComboBox.setWidthFull();
-    titleMultiSelectComboBox.setVisible(false); // Initially hidden
+    titleMultiSelectComboBox.setVisible(false);
     titleMultiSelectComboBox.setId("title-multi-select-combo-box");
 
     // Add checkbox to indicate if it's a title segment
@@ -945,7 +905,7 @@ public class ShowDetailView extends Main
         event -> {
           titleMultiSelectComboBox.setVisible(event.getValue());
           if (!event.getValue()) {
-            titleMultiSelectComboBox.clear(); // Clear selection if not a title segment
+            titleMultiSelectComboBox.clear();
           }
         });
 
@@ -1007,9 +967,9 @@ public class ShowDetailView extends Main
                   wrestlersCombo.getValue(),
                   winners,
                   rulesCombo.getValue(),
-                  newSegment)) { // Pass the new segment object
+                  newSegment)) {
                 dialog.close();
-                refreshSegmentsGrid(); // Call refreshSegmentsGrid
+                refreshSegmentsGrid();
               }
             });
     saveButton.addThemeVariants(ButtonVariant.LUMO_PRIMARY);
@@ -1114,8 +1074,6 @@ public class ShowDetailView extends Main
     narrationArea.setId("edit-narration-text-area");
     formLayout.setColspan(narrationArea, 2);
 
-    // ... other fields ...
-
     // Title selection (multi-select) - only visible if segment is a title segment
     MultiSelectComboBox<Title> titleMultiSelectComboBox = new MultiSelectComboBox<>("Titles");
     titleMultiSelectComboBox.setItems(
@@ -1124,8 +1082,8 @@ public class ShowDetailView extends Main
             .collect(Collectors.toList()));
     titleMultiSelectComboBox.setItemLabelGenerator(Title::getName);
     titleMultiSelectComboBox.setWidthFull();
-    titleMultiSelectComboBox.setVisible(segment.getIsTitleSegment()); // Control visibility
-    titleMultiSelectComboBox.setValue(segment.getTitles()); // Set initial value
+    titleMultiSelectComboBox.setVisible(segment.getIsTitleSegment());
+    titleMultiSelectComboBox.setValue(segment.getTitles());
     titleMultiSelectComboBox.setId("edit-title-multi-select-combo-box");
 
     // Add checkbox to indicate if it's a title segment
@@ -1136,7 +1094,7 @@ public class ShowDetailView extends Main
         event -> {
           titleMultiSelectComboBox.setVisible(event.getValue());
           if (!event.getValue()) {
-            titleMultiSelectComboBox.clear(); // Clear selection if not a title segment
+            titleMultiSelectComboBox.clear();
           }
         });
 
@@ -1170,9 +1128,9 @@ public class ShowDetailView extends Main
                   wrestlersCombo.getValue(),
                   winnersCombo.getValue(),
                   rulesCombo.getValue(),
-                  segment)) { // Pass the segment to update
+                  segment)) {
                 dialog.close();
-                refreshSegmentsGrid(); // Call refreshSegmentsGrid
+                refreshSegmentsGrid();
               }
             });
     saveButton.addThemeVariants(ButtonVariant.LUMO_PRIMARY);
@@ -1210,7 +1168,7 @@ public class ShowDetailView extends Main
                         "Segment deleted successfully!", 3000, Notification.Position.BOTTOM_START)
                     .addThemeVariants(NotificationVariant.LUMO_SUCCESS);
                 confirmDialog.close();
-                refreshSegmentsGrid(); // Call refreshSegmentsGrid
+                refreshSegmentsGrid();
               } catch (Exception e) {
                 Notification.show(
                         "Error deleting segment: " + e.getMessage(),
@@ -1374,11 +1332,7 @@ public class ShowDetailView extends Main
       // Re-enable/disable adjudicate button based on new segment status
       boolean hasPendingSegments =
           updatedSegments.stream()
-              .anyMatch(
-                  segment ->
-                      segment.getAdjudicationStatus()
-                          == com.github.javydreamercsw.management.domain.AdjudicationStatus
-                              .PENDING);
+              .anyMatch(segment -> segment.getAdjudicationStatus() == AdjudicationStatus.PENDING);
       // Find the adjudicate button and update its enabled state
       contentLayout
           .getChildren()
@@ -1422,13 +1376,13 @@ public class ShowDetailView extends Main
       // Check if the completed show is the one currently being viewed
       assert adjudicationCompletedEvent.getShow().getId() != null;
       if (adjudicationCompletedEvent.getShow().getId().equals(currentShowId)) {
-        getUI().ifPresent(ui -> ui.access(this::refreshSegmentsGrid)); // Call refreshSegmentsGrid
+        getUI().ifPresent(ui -> ui.access(this::refreshSegmentsGrid));
       }
     } else if (event instanceof SegmentsApprovedEvent segmentsApprovedEvent) {
       // Check if the completed show is the one currently being viewed
       assert segmentsApprovedEvent.getShow().getId() != null;
       if (segmentsApprovedEvent.getShow().getId().equals(currentShowId)) {
-        getUI().ifPresent(ui -> ui.access(this::refreshSegmentsGrid)); // Call refreshSegmentsGrid
+        getUI().ifPresent(ui -> ui.access(this::refreshSegmentsGrid));
       }
     }
   }
